--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    
+  "jupyter.interactiveWindow.textEditor.cellFolding": true,
+  "python.defaultInterpreterPath": "./.venv/bin/python",
+  // If support for Bun should be added to the default "JavaScript Debug Terminal".
+  "bun.debugTerminal.enabled": true,
+
+  // If the debugger should stop on the first line of the program.
+   // The path to the `bun` executable.
+   "bun.runtime": "/home/adrian/.bun/bin/bun",
+  "bun.debugTerminal.stopOnEntry": false
 }
